[gd_scene load_steps=2 format=3 uid="uid://c836of14cetx7"]

[ext_resource type="Script" path="res://Battle/item_button.gd" id="1_jbdu5"]

[node name="ItemButton" type="Panel"]
custom_minimum_size = Vector2(40, 40)
script = ExtResource("1_jbdu5")

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Quantity" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 10
text = "999"
horizontal_alignment = 2

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
